@@ -2,6 +2,8 @@
 A detailed history of Beezer...
 
 • Version 1.00
+> Updated AboutWindow, removed Authorwindow
+> Enhanced path checking for worker binaries
 > Added support for xz archives
 > Removed obsolete ZETA code
 > Migrate settings folder to B_USER_SETTINGS_DIRECTORY, to be more consistent with Haiku standards
